--- a/.settings/org.erlide.core.prefs
+++ b/.settings/org.erlide.core.prefs
@@ -1,8 +1,9 @@
-#Sat Nov 26 18:38:06 CET 2011
+#Fri Dec 16 18:03:57 CET 2011
 backend_version=R14B
+compiler/debug_info=true
 eclipse.preferences.version=1
 external_includes=
 external_modules=
-include_dirs=include;
+include_dirs=include
 output_dir=ebin
-source_dirs=src;
+source_dirs=src
